--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="title">Title</string>
     <string name="notes">Notes</string>
+    <string name="menu_insert">Tasks</string>
 </resources>
