--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_task_edit">Tasks</string>
 
-    <string name="title">Title</string>
-    <string name="notes">Notes</string>
+    <string name="title">Titel</string>
+    <string name="notes">Notizen</string>
     <string name="menu_insert">Task hinzufügen</string>
+    <string name="confirm">Speichern</string>
 </resources>
