save-Methode implementiert (S. 264)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="confirm">Speichern</string>
     <string name="delete_q">Löschen?</string>
     <string name="delete">Löschen</string>
+    <string name="task_saved_message">Task wurde gespeichert</string>
 </resources>
